Remove fixed height on small screens.

--- a/app/assets/stylesheets/sass/instructors.scss
+++ b/app/assets/stylesheets/sass/instructors.scss
@@ -5,8 +5,8 @@
   clear: left;
 }
 .short-bio {
-  min-height: 475px;
-  max-height: 475px;
+  min-height: 485px;
+  max-height: 485px;
   overflow: auto;
 }
 
@@ -16,6 +16,12 @@
   }
   .instructor:nth-child(4n+1){
     clear: none;
+  }
+}
+@media (max-width: $screen-sm-min) {
+  .short-bio {
+    min-height: inherit !important;
+    max-height: inherit !important;
   }
 }
 
